# jbang-jupyter-runner

./: .gitignore  AGENTS.MD  CHANGELOG.md  CONTRIBUTING.md  EXTENSION_SETUP.md  LOCAL_TESTING.md  MANIFEST.in  README.md  STANDALONE.md  install.json  install.sh  mise.toml  package-lock.json  package.json  pyproject.toml  test-extension.sh  test-local.sh
.github/workflows/: binder-on-pr.yml  build.yml  check-release.yml  enforce-label.yml  prep-release.yml  publish-release.yml  update-integration-tests.yml
docs/: DEBUG_EXTENSION.md  DEPENDENCIES.md  DEVELOPMENT.md  LOCAL_TESTING.md  STANDALONE.md  USAGE.md
jupyter_jbang_runner/: __init__.py  _version.py
src/: index.ts  runButton.ts
